syntax = "proto3";

package ethereum.eth.dbval;

option go_package = "github.com/prysmaticlabs/prysm/v4/proto/dbval;dbval";

message BackfillStatus {
    uint64 high_slot = 1;
    bytes high_root = 2;
    uint64 low_slot = 3;
    bytes low_root = 4;
    uint64 origin_slot = 5;
    bytes origin_root = 6;
}
